--- a/src/components/Chat/index.css
+++ b/src/components/Chat/index.css
@@ -2,21 +2,21 @@
 /* Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: var(--secondary) var(--primary);
+  scrollbar-color: #cdd5e0;
 }
 
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 15px;
+  width: 5px;
 }
 
 *::-webkit-scrollbar-track {
-  background: var(--primary);
+  background: #f0f2f9;
   border-radius: 5px;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: var(--secondary);
+  background-color: #f0f2f9;
   border-radius: 14px;
-  border: 3px solid var(--primary);
+  border: 3px solid #cdd5e0;
 }
