--- a/src/components/MarkDown/index.css
+++ b/src/components/MarkDown/index.css
@@ -2,3 +2,11 @@
 .code-wrap:hover .copy-wrap{
   display: block;
 }
+
+.markdown-body ol{
+  list-style: decimal;
+}
+
+.markdown-body pre {
+  padding: 0;
+}
