--- a/src/components/VirtualizedList/index.css
+++ b/src/components/VirtualizedList/index.css
@@ -1,21 +1,21 @@
 
 /* Firefox */
-.custom-scrollbar {
+* {
   scrollbar-width: thin;
   scrollbar-color: #cdd5e0;
 }
 
 /* Chrome, Edge, and Safari */
-.custom-scrollbar::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 5px;
 }
 
-.custom-scrollbar::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background: #f0f2f9;
   border-radius: 5px;
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background-color: #f0f2f9;
   border-radius: 14px;
   border: 3px solid #cdd5e0;
