--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -100,6 +100,12 @@ html,body{
   border: 3px solid #cdd5e0;
 }
 
+/* 按钮统一风格 */
 .button {
-  @apply px-4 py-1 mx-auto text-sm tracking-widest text-white rounded-sm bg-violet-500 hover:bg-violet-600;
+  @apply px-4 py-1 text-sm tracking-widest text-white rounded-sm bg-violet-500 hover:bg-violet-600;
+}
+
+/* 阴影在上方 */
+.shadow-top{
+  box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1), 0 -2px 4px -1px rgba(0, 0, 0, 0.06);
 }
