--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -109,3 +109,7 @@ html,body{
 .shadow-top{
   box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1), 0 -2px 4px -1px rgba(0, 0, 0, 0.06);
 }
+/* 阴影在左侧  */
+.shadow-left{
+  box-shadow: -4px 0 6px -1px rgba(0, 0, 0, 0.1), -2px 0 4px -1px rgba(0, 0, 0, 0.06);
+}
