--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -1,8 +1,5 @@
 .cssload-loader {
 	position: relative;
-	left: calc(50% - 31px);
-	width: 62px;
-	height: 62px;
 	border-radius: 50%;
 	perspective: 780px;
 }
@@ -19,21 +16,21 @@
 	left: 0%;
 	top: 0%;
 	animation: cssload-rotate-one 1.15s linear infinite;
-	border-bottom: 3px solid rgb(0,0,0);
+	border-bottom: 3px solid #c084fc;
 }
 
 .cssload-inner.cssload-two {
 	right: 0%;
 	top: 0%;
 	animation: cssload-rotate-two 1.15s linear infinite;
-	border-right: 3px solid rgb(0,0,0);
+	border-right: 3px solid #c084fc;
 }
 
 .cssload-inner.cssload-three {
 	right: 0%;
 	bottom: 0%;
 	animation: cssload-rotate-three 1.15s linear infinite;
-	border-top: 3px solid rgb(0,0,0);
+	border-top: 3px solid #c084fc;
 }
 
 
