--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -104,13 +104,20 @@ html,body{
 
 /* 按钮统一风格 */
 .button {
-  @apply px-4 py-1 text-sm tracking-widest text-white rounded-sm bg-violet-500 hover:bg-violet-600;
+  @apply px-4 py-1 tracking-widest text-white rounded-sm bg-violet-500 hover:bg-violet-600;
 }
 
 /* 阴影在上方 */
 .shadow-top{
-  box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1), 0 -2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 -1px 3px 0 rgb(0 0 0 / 0.1), 0 -1px 2px -1px rgb(0 0 0 / 0.1);
 }
+.show-top-sm{
+  box-shadow: 0 -1px 2px 0 rgb(0 0 0 / 0.05);
+}
+.show-top-md{
+  box-shadow: 0 -4px 6px -1px rgb(0 0 0 / 0.1), 0 -2px 4px -2px rgb(0 0 0 / 0.1);
+}
+
 /* 阴影在左侧  */
 .shadow-left{
   box-shadow: -4px 0 6px -1px rgba(0, 0, 0, 0.1), -2px 0 4px -1px rgba(0, 0, 0, 0.06);
