--- a/src/app/login/index.css
+++ b/src/app/login/index.css
@@ -1,4 +1,4 @@
 
 .form-input{
-  @apply block w-full py-1 mt-2 text-base border-gray-300 rounded-md shadow-sm md:text-sm focus:border-violet-300 focus:ring focus:ring-violet-200 focus:ring-opacity-50;
+  @apply block w-full h-10 mt-2 text-base border-gray-300 rounded-md shadow-sm md:text-sm focus:border-violet-300 focus:ring focus:ring-violet-200 focus:ring-opacity-50;
 }
